@@ -5,6 +5,7 @@ Changelog
 ---------
 - **Backward incompatible change:** The ``hana://`` DBURI schema will now use ``hdbcli`` by default.
 - Support of Python 3
+- Support for tenant specification in connect URL and automatic sql port discovery
 
 0.2.2
 -----
